// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`codegen (local) given: [case1] a capturable service (svc-jobs, in-process) when: [t0] the sdk is generated then: the barrel matches snapshot 1`] = `
"/**
 * 🦾 generated by \`sdk-aws-lambda gen\` — do not edit.
 * re-run the codegen to update.
 */

export { svcJobs } from './svcJobs.mechanisms';
export * from './svcJobs.resources';
"
`;

exports[`codegen (local) given: [case1] a capturable service (svc-jobs, in-process) when: [t0] the sdk is generated then: the mechanisms file matches snapshot 1`] = `
"/**
 * 🦾 generated by \`sdk-aws-lambda gen\` — do not edit.
 * re-run the codegen to update.
 */

import { askLambdaEndpoint, type ContextAwsLambdaCaller } from 'sdk-aws-lambda';
import type { SvcJobsJob } from './svcJobs.resources';

export const svcJobs = {
  getJob: (
    event: { uuid: string },
    context: ContextAwsLambdaCaller,
  ): Promise<{ job: SvcJobsJob }> =>
    askLambdaEndpoint<{ uuid: string }, { job: SvcJobsJob }>(
      { which: { service: 'svc-jobs', function: 'getJob' }, event },
      context,
    ),
  getJobs: (
    event: { limit: number },
    context: ContextAwsLambdaCaller,
  ): Promise<{ jobs: SvcJobsJob[] }> =>
    askLambdaEndpoint<{ limit: number }, { jobs: SvcJobsJob[] }>(
      { which: { service: 'svc-jobs', function: 'getJobs' }, event },
      context,
    ),
};
"
`;

exports[`codegen (local) given: [case1] a capturable service (svc-jobs, in-process) when: [t0] the sdk is generated then: the resources file matches snapshot (dobj capture, metadata, no schema) 1`] = `
"/**
 * 🦾 generated by \`sdk-aws-lambda gen\` — do not edit.
 * re-run the codegen to update.
 */

import { DomainEntity, DomainLiteral } from 'domain-objects';

export interface SvcJobsAddress {
  city: string;
  postal: string;
}

export class SvcJobsAddress
  extends DomainLiteral<SvcJobsAddress>
  implements SvcJobsAddress {}

export interface SvcJobsJob {
  uuid: string;
  title: string;
  address: SvcJobsAddress;
}

export class SvcJobsJob extends DomainEntity<SvcJobsJob> implements SvcJobsJob {
  public static primary = ['uuid'] as const;
  public static unique = ['title'] as const;
  public static alias = { singular: 'job', plural: 'jobs' };
  public static nested = { address: SvcJobsAddress };
}
"
`;

exports[`codegen (local) given: [case2] cli error paths when: [t0] absent --for then: it exits 2 (constraint) and the exit is stable 1`] = `
{
  "exit": 2,
  "message": "✋ ConstraintError: --for is required; must be a svc-<noun> service name

{
  "usage": "sdk-aws-lambda gen --for svc-<noun> --into <dir> --env <test|prep|prod>"
}",
}
`;

exports[`codegen (local) given: [case2] cli error paths when: [t1] non-svc --for then: it exits 2 (constraint) and the exit is stable 1`] = `
{
  "exit": 2,
  "message": "✋ ConstraintError: invalid --for value 'jobs'; must be a svc-<noun> service name

{
  "usage": "sdk-aws-lambda gen --for svc-<noun> --into <dir> --env <test|prep|prod>"
}",
}
`;

exports[`codegen (local) given: [case2] cli error paths when: [t2] absent --into then: it exits 2 (constraint) and the exit is stable 1`] = `
{
  "exit": 2,
  "message": "✋ ConstraintError: --into <dir> is required

{
  "usage": "sdk-aws-lambda gen --for svc-<noun> --into <dir> --env <test|prep|prod>"
}",
}
`;

exports[`codegen (local) given: [case2] cli error paths when: [t3] absent --env then: it exits 2 (constraint) and the exit is stable 1`] = `
{
  "exit": 2,
  "message": "✋ ConstraintError: --env <test|prep|prod> is required

{
  "usage": "sdk-aws-lambda gen --for svc-<noun> --into <dir> --env <test|prep|prod>"
}",
}
`;

exports[`codegen (local) given: [case2] cli error paths when: [t4] bad --env then: it exits 2 (constraint) and the exit is stable 1`] = `
{
  "exit": 2,
  "message": "✋ ConstraintError: --env must be one of: test | prep | prod

{
  "usage": "sdk-aws-lambda gen --for svc-<noun> --into <dir> --env <test|prep|prod>"
}",
}
`;

exports[`codegen (local) given: [case2] cli error paths when: [t5] blocked outside prep (--env prod) then: it exits 2 (constraint) and the exit is stable 1`] = `
{
  "exit": 2,
  "message": "✋ LambdaIntrospectionBlockedError: introspection is only available in prep environment, got: prod

{
  "service": "svc-jobs",
  "access": "prod",
  "hint": "re-run with --env prep"
}",
}
`;

exports[`codegen (local) given: [case3] cli post-AWS error paths when: [t0] service not found (no endpoints) then: the cli exits 2 with a user-visible message (snapshot) 1`] = `
{
  "exit": 2,
  "message": "✋ LambdaServiceNotFoundError: no lambda functions found for service: svc-jobs

{
  "service": "svc-jobs",
  "prefix": "svc-jobs-prep-",
  "hint": "check the --for service name and verify it is deployed to the prep environment"
}",
}
`;

exports[`codegen (local) given: [case3] cli post-AWS error paths when: [t1] endpoint lacks introspection support then: the cli exits 2 with a user-visible message (snapshot) 1`] = `
{
  "exit": 2,
  "message": "✋ LambdaIntrospectionNotSupportedError: lambda does not support introspection (non-schema-payload): svc-jobs-prep-getLegacy

{
  "endpoint": {
    "service": "svc-jobs",
    "access": "prep",
    "function": "getLegacy",
    "slug": "svc-jobs-prep-getLegacy"
  },
  "reason": "non-schema-payload",
  "hint": "ensure handler uses genLambdaEndpoint with zod schemas and env config"
}",
}
`;

exports[`codegen (local) given: [case3] cli post-AWS error paths when: [t2] dobj not capturable (schema-less) then: the cli exits 2 with a user-visible message (snapshot) 1`] = `
{
  "exit": 2,
  "message": "✋ LambdaDomainObjectNotCapturableError: domain-object 'Ghost' cannot be captured: its object schema declares no properties to reconstruct

{
  "name": "Ghost",
  "hint": "ensure the domain-object schema declares its properties (an empty object schema cannot be captured)"
}",
}
`;

exports[`codegen (local) given: [case3] cli post-AWS error paths when: [t3] absent aws credentials then: the cli exits 2 with a user-visible message (snapshot) 1`] = `
{
  "exit": 2,
  "message": "✋ LambdaCredentialsAbsentError: aws credentials are absent or expired; cannot introspect

{
  "service": "svc-jobs",
  "access": "prep",
  "hint": "unlock aws creds (e.g. \`rhx keyrack unlock --owner ehmpath --env prep\`), then re-run"
}",
}
`;
